[workspace]
resolver = "2"
members = [
    "node",
    "runtime",
    "pallets/settlement",
    "pallets/reserve",
    "pallets/mining",
    "pallets/carbon",
    "pallets/twl-token",
    "pallets/oracle",
    "pallets/governance",
    "pallets/bridge",
    "primitives",
    "miner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Substrate
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }

# Local
twill-primitives = { path = "primitives", default-features = false }
pallet-settlement = { path = "pallets/settlement", default-features = false }
pallet-reserve = { path = "pallets/reserve", default-features = false }
pallet-mining = { path = "pallets/mining", default-features = false }
pallet-carbon = { path = "pallets/carbon", default-features = false }
pallet-twl-token = { path = "pallets/twl-token", default-features = false }
pallet-oracle = { path = "pallets/oracle", default-features = false }
pallet-governance = { path = "pallets/governance", default-features = false }
pallet-bridge = { path = "pallets/bridge", default-features = false }

# Frontier (EVM Compatibility) — planned for future implementation
# pallet-evm = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2409", default-features = false }
# pallet-ethereum = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2409", default-features = false }
# pallet-base-fee = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2409", default-features = false }
# fp-rpc = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2409", default-features = false }
# fp-self-contained = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2409", default-features = false }
# fp-evm = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2409", default-features = false }
# fp-ethereum = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2409", default-features = false }
# fc-rpc = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2409" }
# fc-rpc-core = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2409" }
# fc-mapping-sync = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2409" }
# fc-db = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2409" }
# fc-storage = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2409" }

# Common
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }

[profile.release]
panic = "unwind"
opt-level = 3
