[package]
name = "twill-miner"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "twill-miner"
path = "src/main.rs"

[dependencies]
wgpu = "22"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
