[package]
name = "twill-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared primitive types for the Twill Network"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
serde = { workspace = true, optional = true }
sha2 = { workspace = true }
hex = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "serde/std",
    "sha2/std",
    "hex/std",
]
