[package]
name = "twill-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Twill Network runtime — composing all pallets into a working chain"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-executive = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-version = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-offchain = { workspace = true }
sp-session = { workspace = true }
sp-inherents = { workspace = true }
sp-genesis-builder = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-assets = { workspace = true }
# Frontier (EVM) — uncomment after core chain compiles clean
# pallet-evm = { workspace = true }
# pallet-ethereum = { workspace = true }
# pallet-base-fee = { workspace = true }
# fp-rpc = { workspace = true }
# fp-self-contained = { workspace = true }
# fp-evm = { workspace = true }
# fp-ethereum = { workspace = true }

# Twill pallets
twill-primitives = { workspace = true }
pallet-settlement = { workspace = true }
pallet-reserve = { workspace = true }
pallet-mining = { workspace = true }
pallet-carbon = { workspace = true }
pallet-twl-token = { workspace = true }
pallet-oracle = { workspace = true }
pallet-governance = { workspace = true }
pallet-bridge = { workspace = true }

[features]
default = ["std"]
std = [
    "substrate-wasm-builder",
    "codec/std",
    "scale-info/std",
    "serde/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-version/std",
    "sp-transaction-pool/std",
    "sp-offchain/std",
    "sp-session/std",
    "sp-inherents/std",
    "sp-genesis-builder/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-assets/std",
    "twill-primitives/std",
    "pallet-settlement/std",
    "pallet-reserve/std",
    "pallet-mining/std",
    "pallet-carbon/std",
    "pallet-twl-token/std",
    "pallet-oracle/std",
    "pallet-governance/std",
    "pallet-bridge/std",
]
# Frontier std features — add to the list above when EVM is enabled:
# "pallet-evm/std", "pallet-ethereum/std", "pallet-base-fee/std",
# "fp-rpc/std", "fp-self-contained/std", "fp-evm/std", "fp-ethereum/std"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", optional = true }
