[package]
name = "pallet-governance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Twill Network governance — board elections + community proposals"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
twill-primitives = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "twill-primitives/std",
]
