[package]
name = "pallet-settlement"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTLC-based atomic settlement engine for the Twill Network"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sha2 = { workspace = true }
twill-primitives = { workspace = true }
log = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sha2/std",
    "twill-primitives/std",
    "log/std",
]
runtime-benchmarks = ["frame-support/runtime-benchmarks", "frame-system/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
