[package]
name = "pallet-twl-token"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TWL native token management — cap enforcement, vesting, burn wallet"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
twill-primitives = { workspace = true }
log = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "twill-primitives/std",
    "log/std",
]
runtime-benchmarks = ["frame-support/runtime-benchmarks", "frame-system/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
